feat: require verification for email changes
